<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="Question">What Countrydoes this flag belong to?</string>
    <string name="_0_10">0/10</string>
    <string name="argentina">Argentina</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is_9_out_of_10">Your score is 9 out of 10</string>
    <string name="finish">FINISH</string>
</resources>