<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ResultActivity">
    <TextView
        android:id="@+id/tv_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:text="@string/result"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/tv_congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
        android:text="@string/hey_congratulations"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/username"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:text="@string/your_score_is_9_out_of_10" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/finish"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>