<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#363A43"
            android:textSize="22sp"
            android:text="@string/Question"
            android:gravity="center" />
        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_flag_of_argentina"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="0"/>
            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="#7A8089"
                android:textSize="14sp"
                android:text="@string/_0_10"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_optionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:backgroundTint="@null"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/argentina"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:backgroundTint="@null"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/argentina"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:backgroundTint="@null"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/argentina"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:backgroundTint="@null"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/argentina"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/purple_500"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="8dp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>